# concrete_block_behavior_tree

./: CMakeLists.txt  README.md  package.xml
behavior_trees/: basic_pick_and_place.xml  concrete_block_assembly.xml  dummy_start.xml  minimal_smoke.xml  move_empty.xml  move_empty_pzs100.xml  scan_sequence_smoke.xml  single_block_execute.xml  single_block_plan.xml  single_block_planning_probe.xml  stack_block_1_on_block_2.xml  subtree_a2b_movement_pzs100.xml  subtree_execute_trajectory.xml  subtree_named_configuration_step.xml  subtree_pick_and_place_block.xml  subtree_pick_block.xml  subtree_place_block.xml  subtree_recovery_scan.xml  subtree_scene_scan.xml  subtree_transport_block.xml  wall_assembly.xml
config/: bt_assembly.yaml  bt_common.yaml  bt_move_empty.yaml  bt_operator.yaml  bt_panel_catalog.yaml  bt_server_override.yaml  bt_wall_assembly.yaml  default.yaml  dummy_start.yaml  estimators_pzs100.yaml  move_empty_legacy.yaml  move_empty_shared.yaml  phase1_timber_backend.yaml  scan_smoke.yaml  single_block_planning_probe.yaml  wall_plans.yaml
config/models/: ConcreteBlock.stl  concrete_block.sdf
config/motion_planning/: grip_traj_parameter_pzs100.yaml  mp_parameter_pzs100.yaml
config/profiles/: assembly.yaml  basic_pick_and_place.yaml  move_empty.yaml  single_block_execute.yaml  single_block_plan.yaml  wall_assembly.yaml
config/ros2_control/: crane_controller_hydraulic_a2b_jtc_pid_pzs100.ros2_control.yaml  crane_controller_hydraulic_common_pzs100.ros2_control.yaml  pzs100_trajectory_forward.ros2_control.yaml
doc/: BEHAVIOR_TREES.md  GROOT.md
env-hooks/: concrete_block_behavior_tree.dsv.in
include/concrete_block_behavior_tree/plugins/action/: compute_trajectory.hpp  execute_planned_motion.hpp  execute_trajectory.hpp  get_next_assembly_task.hpp  gripper_action.hpp  move_to_named_configuration.hpp  plan_and_compute_trajectory.hpp  plan_block_motion.hpp  plan_geometric_path.hpp  prepare_move_empty_request.hpp  prepare_single_block_request.hpp  publish_grasp_command.hpp  run_pose_estimation.hpp  set_block_task_status.hpp  set_place_approach_pose.hpp  sync_gazebo_blocks_to_world_model.hpp
include/concrete_block_behavior_tree/plugins/condition/: check_gripper_effort.hpp  wait_for_gazebo_grasp.hpp
launch/: bt.launch.py  concrete_bare_metal_single_block.launch.py  concrete_estimators.launch.py  concrete_headless_exec.launch.py  concrete_no_gazebo_single_block.launch.py  dev_smoke_fixed_time.launch.py  full_stack.launch.py  gazebo_basic_pick_and_place_pzs100.launch.py  gazebo_model_bt.launch.py  gazebo_wall_assembly_pzs100.launch.py  offline_test.launch.py  pzs100_bringup.launch.py  scan_sequence_smoke.launch.py  sim_wall_build.launch.py  sim_wall_build_full.launch.py  sim_wall_build_smoke.launch.py  simple_sim_bt_dummy.launch.py  timber_backend_compat.launch.py  timber_single_block_execute.launch.py
models/concrete_block/: model.config  model.sdf
rviz/: cbs.rviz  concrete_bt.rviz
scripts/: gazebo_block_spawner.py  pzs100_rviz_joint_state_adapter.py
src/plugins/action/: compute_trajectory.cpp  execute_planned_motion.cpp  execute_trajectory.cpp  get_next_assembly_task.cpp  gripper_action.cpp  move_to_named_configuration.cpp  plan_and_compute_trajectory.cpp  plan_block_motion.cpp  plan_geometric_path.cpp  prepare_move_empty_request.cpp  prepare_single_block_request.cpp  publish_grasp_command.cpp  run_pose_estimation.cpp  set_block_task_status.cpp  set_place_approach_pose.cpp  sync_gazebo_blocks_to_world_model.cpp
src/plugins/condition/: check_gripper_effort.cpp  wait_for_gazebo_grasp.cpp
test/: test_basic_pick_and_place_launch.py
