<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>concrete_block_behavior_tree</name>
  <version>0.1.0</version>
  <description>Behavior tree package for concrete block assembly sequencing.</description>
  <maintainer email="vscode@example.com">vscode</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>behaviortree_cpp_v3</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>rclcpp</depend>
  <depend>pluginlib</depend>

  <depend>lsrl_behavior_tree</depend>
  <depend>concrete_block_perception</depend>
  <depend>concrete_block_motion_planning</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
